--- a/Barbershop/shop.html
+++ b/Barbershop/shop.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Магазин</title>
+	<link rel="stylesheet" type="text/css" href="../Barbershop/css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../Barbershop/css/style.css">
 </head>
 <body>
