--- a/Nerds/catalog.html
+++ b/Nerds/catalog.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Каталог сайтов дизайн-студии NЁRDS</title>
+	<link rel="stylesheet" type="text/css" href="../Nerds/css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../Nerds/css/style.css">
 </head>
 <body>
