--- a/Barbershop/index.html
+++ b/Barbershop/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Барбершоп «Бородинский»</title>
-	<link rel="stylesheet" type="text/css" href="../Barbershop/css/style.css">	
-</head>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="../Barbershop/css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="../Barbershop/css/style.css">
+	</head>
 <body>
 	<header class="main-header">
 		<nav class="main-mavigation">
