--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Дизайн-студия NЁRDS</title>
+	<link rel="stylesheet" type="text/css" href="../Nerds/css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../Nerds/css/style.css">
 </head>
 <body>
@@ -36,7 +37,7 @@
 						для вашего сайта или мобильного приложения						
 					</p>
 					<a href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
-					<img src="../Nerds/img/slider-1.jpg width="698" height="413" alt="slider-1"">
+					<img src="../Nerds/img/slider-1.jpg" width="698" height="413" alt="slider-1">
 				</li>
 
 				<li class="slider-2">
@@ -47,7 +48,7 @@
 						для расчета идеальных пропорций						
 					</p>
 					<a href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
-					<img src="../Nerds/img/slider-2.jpg width="698" height="413" alt="slider-2"">
+					<img src="../Nerds/img/slider-2.jpg" width="698" height="413" alt="slider-2">
 				</li>
 
 				<li class="slider-3">
@@ -58,7 +59,7 @@
 						Ближе к полуночи работа только начинается.						
 					</p>
 					<a href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
-					<img src="../Nerds/img/slider-3.jpg width="698" height="413" alt="slider-3"">
+					<img src="../Nerds/img/slider-3.jpg" width="698" height="413" alt="slider-3">
 				</li>
 			</ul>
 
@@ -85,7 +86,7 @@
 
 			<ul class="product-list">
 				<li class="product-1">
-					<img src="../Nerds/img/product-1.jpg width="300" height="146" alt="product-1"">
+					<img src="../Nerds/img/product-1.jpg" width="300" height="146" alt="product-1"">
 					<p class="product-header">Веб-сайты</p>
 					<p>Мир никогда не будет прежним<br>
 						после того, как увидит Ваш сайт!						
@@ -94,7 +95,7 @@
 				</li>
 
 				<li class="product-2">
-					<img src="../Nerds/img/product-2.jpg width="300" height="146" alt="product-2"">
+					<img src="../Nerds/img/product-2.jpg" width="300" height="146" alt="product-2"">
 					<p class="product-header">Приложения</p>
 					<p>Покорите топ-10 приложений в<br>
 						AppStore и Google Play						
@@ -103,7 +104,7 @@
 				</li>
 
 				<li class="product-3">
-					<img src="../Nerds/img/product-3.jpg width="300" height="146" alt="product-3"">
+					<img src="../Nerds/img/product-3.jpg" width="300" height="146" alt="product-3"">
 					<p class="product-header">Презентации</p>
 					<p>Вы даже не подозреваете,<br>
 						насколько Вы изумительны!						
@@ -126,7 +127,7 @@
 			<p>Веб-сайтов любой сложности<br>
 			Мобильных приложений для iOS и Android<br>
 			Слайдшоу и видео для корпоративных презентаций</p>
-			<img src="../Nerds/img/logo2.svg">
+			<img src="../Nerds/img/logo2.svg" alt="Nerds">
 			<p class="presentation-underheader-2">с 2004 года Любим точность во всем:</p>
 			<p>
 				<ul class="advantages-list">
