--- a/Barbershop/index.html
+++ b/Barbershop/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="../Barbershop/css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../Barbershop/css/style.css">
 	</head>
-<body>
+<body class="main-body">
 	<header class="main-header">
 		<nav class="main-mavigation">
 			<a class="main-header-logo">
@@ -108,17 +108,17 @@
 					<label for="appointment-date">Дата</label>
 					<input id="appointment-date" type="text" name="date" value="" placeholder="08.10.2017">
 				</p>
-				<p class="appointment-time">
+				<p class="appointment-item">
 					<label for="appointment-time">Время</label>
-					<input id="appointment-date" type="text" name="time" value="" placeholder="10:00">
+					<input id="appointment-time" type="text" name="time" value="" placeholder="10:00">
 				</p>
-				<p class="appointment-name">
+				<p class="appointment-item">
 					<label for="appointment-name">Ваше имя</label>
-					<input id="appointment-date" type="text" name="name" value="" placeholder="Борода">
+					<input id="appointment-name" type="text" name="name" value="" placeholder="Борода">
 				</p>
-				<p class="appointment-phone">
+				<p class="appointment-item">
 					<label for="appointment-phone">Телефон</label>
-					<input id="appointment-date" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
+					<input id="appointment-phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
 				</p>
 				<button class="button" type="submit">Отправить</button>							
 				</form>
