--- a/Barbershop/shop.html
+++ b/Barbershop/shop.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Магазин</title>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../Barbershop/css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../Barbershop/css/style.css">
 </head>
@@ -52,7 +53,7 @@
 						</li>
 						<li class="filter-option">
 							<label for="filter-mr-natty">Mr Natty</label>
-							<input class="visually-hidden filter-input filter-input-checkbox filter-mr-natty" id="filter-mr-natty" type="checkbox" name="mr-natty">							
+							<input class="visually-hidden filter-input filter-input-checkbox filter-mr-natty" id="filter-mr-natty" type="checkbox" name="mr-natty">			
 						</li>
 						<li class="filter-option">
 							<label for="filter-suavecito">Suavecito</label>
@@ -64,7 +65,7 @@
 						</li>
 						<li class="filter-option">
 							<label for="filter-murrays">Murray's</label>
-							<input class="visually-hidden filter-input filter-input-checkbox" id="filter-murrays" type="checkbox" name="murrays" checked>							
+							<input class="visually-hidden filter-input filter-input-checkbox" id="filter-murrays" type="checkbox" name="murrays" checked>						
 						</li>
 						<li class="filter-option">
 							<label for="filter-american-crew">American Crew</label>
