--- a/Barbershop/item.html
+++ b/Barbershop/item.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Набор для путешествий «Baxter of California»</title>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../Barbershop/css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../Barbershop/css/style.css">
 </head>
@@ -42,12 +43,12 @@
 		<section class="product-photos">
 			<h2 class="visually-hidden">Изображение товара</h2>
 			<p class="product-photo-full">
-				<img src="../Barbershop/img/product-big.jpg" width="460" height="498" alt="Фото всего набора">				
+				<img src="../Barbershop/img/BoC-travel-kit.jpg" width="460" height="498" alt="Фото всего набора">				
 			</p>
 			<ul class="product-photo-preview">
-				<li><img src="../Barbershop/img/product-small-1.jpg" width="140" height="149" alt="Фото анфас"></li>
-				<li><img src="../Barbershop/img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль"></li>
-				<li><img src="../Barbershop/img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части"></li>	
+				<li><img src="../Barbershop/img/BoC-travel-kit-preview-1.jpg" width="140" height="149" alt="Фото анфас"></li>
+				<li><img src="../Barbershop/img/BoC-travel-kit-preview-2.jpg" width="140" height="149" alt="Фото в профиль"></li>
+				<li><img src="../Barbershop/img/BoC-travel-kit-preview-3.jpg" width="140" height="149" alt="Фото отдельной части"></li>	
 			</ul>
 		</section>
 
