--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Дизайн-студия NЁRDS</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../Nerds/css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../Nerds/css/style.css">
 </head>
