--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -16,6 +16,7 @@
 				<li><a href="clients.html">Клиенты</a></li>
 				<li><a href="catalog.html.html">Магазин</a></li>
 				<li><a href="contacts.html">Контакты</a></li>
+				<li class="basket-icon"><img src="../Nerds/img/basket.svg"></li>
 				<li><a href="buy.html">Корзина</a></li>
 			</ul>
 		</nav>
@@ -38,7 +39,7 @@
 						для вашего сайта или мобильного приложения						
 					</p>
 					<a href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
-					<img src="../Nerds/img/slider-1.jpg" width="698" height="413" alt="slider-1">
+					<img src="../Nerds/img/slide-1.png" width="698" height="413" alt="slider-1">
 				</li>
 
 				<li class="slider-2">
@@ -49,7 +50,7 @@
 						для расчета идеальных пропорций						
 					</p>
 					<a href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
-					<img src="../Nerds/img/slider-2.jpg" width="698" height="413" alt="slider-2">
+					<img src="../Nerds/img/slide-2.png" width="698" height="413" alt="slider-2">
 				</li>
 
 				<li class="slider-3">
@@ -60,7 +61,7 @@
 						Ближе к полуночи работа только начинается.						
 					</p>
 					<a href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
-					<img src="../Nerds/img/slider-3.jpg" width="698" height="413" alt="slider-3">
+					<img src="../Nerds/img/slide-3.png" width="698" height="413" alt="slider-3">
 				</li>
 			</ul>
 
