--- a/Nerds/catalog.html
+++ b/Nerds/catalog.html
@@ -11,12 +11,13 @@
 
 	<header class="main-header">
 		<nav class="main-mavigation">
-			<a class="header-logo"><img src="../Nerds/img/nerds-logo.svg" width="150" height="40" alt="Логотип дизайн-студии NЁRDS"></a>
+			<a class="header-logo" href="index.html"><img src="../Nerds/img/nerds-logo.png" width="165" height="60" alt="Логотип дизайн-студии NЁRDS"></a>
 			<ul class="site-navigation">
-				<li><a href="index.html">Студия</a></li>
+				<li class="site-navigation-current"><a href="index.html">Студия</a></li>
 				<li><a href="clients.html">Клиенты</a></li>
-				<li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
+				<li><a href="catalog.html.html">Магазин</a></li>
 				<li><a href="contacts.html">Контакты</a></li>
+				<li class="basket-icon"><img src="../Nerds/img/basket.png"></li>
 				<li><a href="buy.html">Корзина</a></li>
 			</ul>
 		</nav>
@@ -86,7 +87,7 @@
 					</ul>
 				</fieldset>
 
-				<button class="filter-button button" type="submit">Показать</button>
+				<button class="button button-grey" class="filter-button button" type="submit">Показать</button>
 
 			</form>
 			
@@ -165,10 +166,10 @@
 			</ul>
 
 			<ul class="pagination-list">
-				<li class="pagination-item pagination-item-current"><a>1</a></li>
-				<li class="pagination-item"><a href="#">2</a></li>
-				<li class="pagination-item"><a href="#">3</a></li>
-				<li class="pagination-item"><a href="#">Следующая</a></li>
+				<li class="pagination-item pagination-item-current button button-grey"><a>1</a></li>
+				<li class="pagination-item button button-grey"><a href="#">2</a></li>
+				<li class="pagination-item button button-grey"><a href="#">3</a></li>
+				<li class="pagination-item button button-grey"><a href="#">Следующая</a></li>
 			</ul>
 		</section>
 
@@ -193,7 +194,7 @@
 				тел. +7(812)275-75-75
 			</p>
 			<form action="https://echo.nerds.ru" method="post">
-				<button type="submit">Напишите нам</button>
+				<button class="button button-red" type="submit">Напишите нам</button>
 			</form>
 		</div>
 
