--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -10,13 +10,13 @@
 <body>
 	<header class="main-header">
 		<nav class="main-mavigation">
-			<a class="header-logo"><img src="../Nerds/img/nerds-logo.svg" width="150" height="40" alt="Логотип дизайн-студии NЁRDS"></a>
+			<a class="header-logo" href="index.html"><img src="../Nerds/img/nerds-logo.png" width="165" height="60" alt="Логотип дизайн-студии NЁRDS"></a>
 			<ul class="site-navigation">
 				<li class="site-navigation-current"><a href="index.html">Студия</a></li>
 				<li><a href="clients.html">Клиенты</a></li>
 				<li><a href="catalog.html.html">Магазин</a></li>
 				<li><a href="contacts.html">Контакты</a></li>
-				<li class="basket-icon"><img src="../Nerds/img/basket.svg"></li>
+				<li class="basket-icon"><img src="../Nerds/img/basket.png"></li>
 				<li><a href="buy.html">Корзина</a></li>
 			</ul>
 		</nav>
@@ -38,7 +38,7 @@
 					<p class="slider-text">Математически выверенный дизайн<br>
 						для вашего сайта или мобильного приложения						
 					</p>
-					<a href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
+					<a class="button button-red" href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
 					<img src="../Nerds/img/slide-1.png" width="698" height="413" alt="slider-1">
 				</li>
 
@@ -49,7 +49,7 @@
 					<p class="slider-text">Никакого креатива, только математические формулы<br>
 						для расчета идеальных пропорций						
 					</p>
-					<a href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
+					<a class="button button-red" href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
 					<img src="../Nerds/img/slide-2.png" width="698" height="413" alt="slider-2">
 				</li>
 
@@ -60,25 +60,25 @@
 					<p class="slider-text">Работать днем, как все? Мы против этого.<br>
 						Ближе к полуночи работа только начинается.						
 					</p>
-					<a href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
+					<a class="button button-red" href="https://adenworker.github.io/Nerds/index.html">Узнать больше</a>
 					<img src="../Nerds/img/slide-3.png" width="698" height="413" alt="slider-3">
 				</li>
 			</ul>
 
-			<fieldset>
-					<legend class="visually-hidden">Переключение слайдеров</legend>
-					<ul>
-						<li class="slider-change">
-							<input class="visually-hidden slider-change-point" type="radio" name="slider-number" value="slider-number-1">
-						</li>
-						<li class="slider-change">
-							<input class="visually-hidden slider-change-point" type="radio" name="slider-number" value="slider-number-1">
-						</li>
-						<li class="slider-change">
-							<input class="visually-hidden slider-change-point" type="radio" name="slider-number" value="slider-number-1">
-						</li>
-					</ul>
-				</fieldset>
+			<fieldset class="slider-changer visually-hidden">
+				<legend class="visually-hidden">Переключение слайдеров</legend>
+				<ul class="slider-radio">
+					<li class="slider-change">
+						<input class="visually-hidden slider-change-point" type="radio" name="slider-number" value="slider-number-1">
+					</li>
+					<li class="slider-change">
+						<input class="visually-hidden slider-change-point" type="radio" name="slider-number" value="slider-number-1">
+					</li>
+					<li class="slider-change">
+						<input class="visually-hidden slider-change-point" type="radio" name="slider-number" value="slider-number-1">
+					</li>
+				</ul>
+			</fieldset>
 
 		</section>
 
@@ -93,7 +93,7 @@
 					<p>Мир никогда не будет прежним<br>
 						после того, как увидит Ваш сайт!						
 					</p>
-					<a href="https://adenworker.github.io/Nerds/catalog.html">Заказать</a>
+					<a class="button button-red" href="https://adenworker.github.io/Nerds/catalog.html">Заказать</a>
 				</li>
 
 				<li class="product-2">
@@ -102,7 +102,7 @@
 					<p>Покорите топ-10 приложений в<br>
 						AppStore и Google Play						
 					</p>
-					<a href="https://adenworker.github.io/Nerds/catalog.html">Заказать</a>
+					<a class="button button-green" href="https://adenworker.github.io/Nerds/catalog.html">Заказать</a>
 				</li>
 
 				<li class="product-3">
@@ -111,12 +111,14 @@
 					<p>Вы даже не подозреваете,<br>
 						насколько Вы изумительны!						
 					</p>
-					<a href="https://adenworker.github.io/Nerds/catalog.html">Заказать</a>
+					<a class="button button-yellow" href="https://adenworker.github.io/Nerds/catalog.html">Заказать</a>
 				</li>
 			</ul>
 			
 		</section>
 		
+		<hr>
+
 		<section class="presentation">
 
 			<h2 class="visually-hidden">О нас</h2>
@@ -125,11 +127,13 @@
 			дизайн-студия из Краснодара.</p>
 			<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
 			превыше креатива. Работаем не покладая рук, как роботы.</p>
-			<p class="presentation-underheader-1">Выполняем заказы на разработку:</p>
-			<p>Веб-сайтов любой сложности<br>
-			Мобильных приложений для iOS и Android<br>
-			Слайдшоу и видео для корпоративных презентаций</p>
-			<img src="../Nerds/img/logo2.svg" alt="Nerds">
+			<div class="presentation-list">
+				<p class="presentation-underheader-1">Выполняем заказы на разработку:</p>
+				<p>Веб-сайтов любой сложности<br>
+				Мобильных приложений для iOS и Android<br>
+				Слайдшоу и видео для корпоративных презентаций</p>
+			</div>
+			<img src="../Nerds/img/nerds-fun-logo.jpg" alt="Nerds">
 			<p class="presentation-underheader-2">с 2004 года Любим точность во всем:</p>
 			<p>
 				<ul class="advantages-list">
@@ -147,24 +151,30 @@
 					</li>
 				</ul>
 			</p>
-			<section class="our-clients">
-				<h2 class="visually-hidden">Наши клиенты</h2>
-				<ul class="clients-list">
-					<li>
-						<a href="#"><img src="../Nerds/img/client-1.png" alt="Html Academy"></a>
-					</li>
-					<li>
-						<a href="#"><img src="../Nerds/img/client-2.png" alt="Барбершоп Бородинский"></a>
-					</li>
-					<li>
-						<a href="#"><img src="../Nerds/img/client-3.png" alt="Pink"></a>
-					</li>
-					<li>
-						<a href="#"><img src="../Nerds/img/client-4.png" alt="Mishka"></a>
-					</li>
-				</ul>
-			</section>
-			
+
+		</section>
+
+		<hr>
+
+		<section class="our-clients">
+
+			<h2 class="visually-hidden">Наши клиенты</h2>
+
+			<ul class="clients-list">
+				<li>
+					<a href="#"><img src="../Nerds/img/client-1.png" alt="Html Academy"></a>
+				</li>
+				<li>
+					<a href="#"><img src="../Nerds/img/client-2.png" alt="Барбершоп Бородинский"></a>
+				</li>
+				<li>
+					<a href="#"><img src="../Nerds/img/client-3.png" alt="Pink"></a>
+				</li>
+				<li>
+					<a href="#"><img src="../Nerds/img/client-4.png" alt="Mishka"></a>
+				</li>
+			</ul>
+						
 		</section>
 
 	</main>
@@ -186,15 +196,15 @@
 			</p>
 			<p>тел. +7(812)275-75-75</p>
 			<form action="https://echo.nerds.ru" method="post">
-				<button type="submit">Напишите нам</button>
+				<button  class="button button-red" type="submit">Напишите нам</button>
 			</form>
 		</div>
 		
 		<div class="footer-social">
 			<ul class="footer-social-buttons">
-				<li><a class="social-button" href="https://vk.com"><img src="../Nerds/img/vk.svg" alt="Вконтакте"></a></li>
-				<li><a class="social-button" href="https://www.facebook.com"><img src="../Nerds/img/fb.svg" alt="Фейсбук"></a></li>
-				<li><a class="social-button" href="https://www.instagram.com"><img src="../Nerds/img/insta.svg" alt="Инстаграм"></a></li>
+				<li><a class="social-button" href="https://vk.com"><img src="../Nerds/img/vk.png" alt="Вконтакте"></a></li>
+				<li><a class="social-button" href="https://www.facebook.com"><img src="../Nerds/img/fb.png" alt="Фейсбук"></a></li>
+				<li><a class="social-button" href="https://www.instagram.com"><img src="../Nerds/img/insta.png" alt="Инстаграм"></a></li>
 			</ul>			
 		</div>
 
@@ -205,13 +215,13 @@
 
 	<section class="modal modal-letter">
 		<h2>Напишите нам</h2>
-		<form class="letter-form" action="https://echo.nerds.ru" method="post">
-			<p class="modal-letter-name">Ваше имя<input class="letter-name" type="text" name="name" placeholder="Представьтесь, пожалуйста"></p>
-			<p class="modal-letter-email">Ваш e-mail<input class="letter-email" type="text" name="e-mail" placeholder="Для отправки ответа"></p>
+		<form class="letter-form" action="https://echo.adenworker.github.io/Nerds" method="post">
+			<p class="modal-letter-name">Ваше имя<input class="letter-name" type="text" name="name" placeholder="Представьтесь, пожалуйста" required></p>
+			<p class="modal-letter-email">Ваш e-mail<input class="letter-email" type="text" name="e-mail" placeholder="Для отправки ответа" required></p>
 			<p class="modal-letter-letter">Текст письма:
-			<textarea class="modal-letter-text" placeholder="В свободной форме"></textarea>
+			<textarea class="modal-letter-text" placeholder="В свободной форме" required></textarea>
 			<button class="button" type="submit">Отправить</button>
-			<span class="modal-close">x</span>
+			<button class="modal-close" type="button">Закрыть</button>
 			</p>
 		</form>
 	</section>
