--- a/Nerds/index.html
+++ b/Nerds/index.html
@@ -216,10 +216,10 @@
 	<section class="modal modal-letter">
 		<h2>Напишите нам</h2>
 		<form class="letter-form" action="https://echo.adenworker.github.io/Nerds" method="post">
-			<p class="modal-letter-name">Ваше имя<input class="letter-name" type="text" name="name" placeholder="Представьтесь, пожалуйста" required></p>
-			<p class="modal-letter-email">Ваш e-mail<input class="letter-email" type="text" name="e-mail" placeholder="Для отправки ответа" required></p>
+			<p class="modal-letter-name">Ваше имя<input class="letter-name" type="text" name="name" placeholder="Представьтесь, пожалуйста" title="Введите Ваше имя."></p>
+			<p class="modal-letter-email">Ваш e-mail<input class="letter-email" type="email" name="e-mail" placeholder="Для отправки ответа" title="Введите Ваш адрес электронной почты."></p>
 			<p class="modal-letter-letter">Текст письма:
-			<textarea class="modal-letter-text" placeholder="В свободной форме" required></textarea>
+			<textarea class="modal-letter-text" placeholder="В свободной форме" title="Введите текст сообщения."></textarea>
 			<button class="button" type="submit">Отправить</button>
 			<button class="modal-close" type="button">Закрыть</button>
 			</p>
