--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Document</title>
 		<title>Website on maintenance, come back later!</title>
 	</head>
-	<body style="background: url(images/bg.jpg) top center no-repeat; font-family: Arial; color:#fff;">
+	<body style="background: url(images/new_bg.jpg) top center no-repeat; font-family: Arial; color:#fff;">
 		<div style="width:900px; margin:0 auto;">
 			<h1 style="text-align:center; font-size:46px; margin-top:160px;">Website on maintenance,<br>come back later!</h1>
 			<p style="font-size:20px; margin-top:50px; border-bottom: 1px solid #fff; padding-bottom:40px;">Currently, the site is carrying out technical work.<br>Please come back later or contact us in one of the following ways:</p>
